# KinectTouch

./: .gitignore  CMakeLists.txt  README.md
src/: ClusterFilter.cpp  ClusterFilter.h  DensityFilter.cpp  DensityFilter.h  KinectTouch.cpp  Libfreenect2OpenCV.cpp  ShapeFilterStrategy.h  Utils.cpp  Utils.h
src/TUIO/: TuioServer.cpp
